AM_PROG_CC_C_O added to avoid config error

--- a/configure.ac
+++ b/configure.ac
@@ -10,6 +10,7 @@ AM_INIT_AUTOMAKE([1.11 -Wall -Werror ])
 AC_CONFIG_SRCDIR([src/clogger.c])
 # Check for C Compiler
 AC_PROG_CC
+AM_PROG_CC_C_O
 # config.h will be created and default header
 AC_CONFIG_HEADERS([config.h])
 # all Macro in this folder
